gpt: start new GPT module
This module is a new implementation for reading GUID Partition Tables
which is much stricter than the existing part_gpt module and exports GPT
data directly instead of the generic grub_partition structure. It will
be the basis for modules that need to read/write/update GPT data.

The current code does nothing more than read and verify the table.

--- a/grub-core/Makefile.core.def
+++ b/grub-core/Makefile.core.def
@@ -822,6 +822,11 @@ module = {
 };
 
 module = {
+  name = gpt;
+  common = lib/gpt.c;
+};
+
+module = {
   name = halt;
   nopc = commands/halt.c;
   i386_pc = commands/i386/pc/halt.c;
