gpt: add write function and gptrepair command
The first hint of something practical, a command that can restore any of
the GPT structures from the alternate location. New test case must run
under QEMU because the loopback device used by the other unit tests does
not support writing.

--- a/Makefile.util.def
+++ b/Makefile.util.def
@@ -1161,6 +1161,12 @@ script = {
 
 script = {
   testcase;
+  name = gptrepair_test;
+  common = tests/gptrepair_test.in;
+};
+
+script = {
+  testcase;
   name = file_filter_test;
   common = tests/file_filter_test.in;
 };
