gpt: new gptprio.next command for selecting priority based partitions
Basic usage would look something like this:

    gptprio.next -d usr_dev -u usr_uuid
    linuxefi ($usr_dev)/boot/vmlinuz mount.usr=PARTUUID=$usr_uuid

After booting the system should set the 'successful' bit on the
partition that was used.

--- a/Makefile.util.def
+++ b/Makefile.util.def
@@ -1167,6 +1167,12 @@ script = {
 
 script = {
   testcase;
+  name = gptprio_test;
+  common = tests/gptprio_test.in;
+};
+
+script = {
+  testcase;
   name = file_filter_test;
   common = tests/file_filter_test.in;
 };
