gpt: add search by partition label and uuid commands
Builds on the existing filesystem search code. Only for GPT right now.

--- a/Makefile.util.def
+++ b/Makefile.util.def
@@ -1271,6 +1271,8 @@ program = {
   name = gpt_unit_test;
   common = tests/gpt_unit_test.c;
   common = tests/lib/unit_test.c;
+  common = grub-core/commands/search_part_label.c;
+  common = grub-core/commands/search_part_uuid.c;
   common = grub-core/disk/host.c;
   common = grub-core/kern/emu/hostfs.c;
   common = grub-core/lib/gpt.c;
