--- a/grub-core/Makefile.core.def
+++ b/grub-core/Makefile.core.def
@@ -1014,6 +1014,16 @@ module = {
 };
 
 module = {
+  name = search_part_uuid;
+  common = commands/search_part_uuid.c;
+};
+
+module = {
+  name = search_part_label;
+  common = commands/search_part_label.c;
+};
+
+module = {
   name = setpci;
   common = commands/setpci.c;
   enable = pci;
