--- a/Makefile.util.def
+++ b/Makefile.util.def
@@ -1273,6 +1273,7 @@ program = {
   common = tests/lib/unit_test.c;
   common = grub-core/commands/search_part_label.c;
   common = grub-core/commands/search_part_uuid.c;
+  common = grub-core/commands/search_disk_uuid.c;
   common = grub-core/disk/host.c;
   common = grub-core/kern/emu/hostfs.c;
   common = grub-core/lib/gpt.c;
