--- a/grub-core/Makefile.core.def
+++ b/grub-core/Makefile.core.def
@@ -2403,3 +2403,9 @@ module = {
   common = loader/i386/xen_file64.c;
   extra_dist = loader/i386/xen_fileXX.c;
 };
+
+module = {
+  name = fwconfig;
+  common = commands/fwconfig.c;
+  enable = x86;
+};
