--- a/tests/util/grub-shell.in
+++ b/tests/util/grub-shell.in
@@ -289,6 +289,8 @@ fi
 cfgfile=`mktemp "${TMPDIR:-/tmp}/tmp.XXXXXXXXXX"` || exit 1
 cat <<EOF >${cfgfile}
 grubshell=yes
+enable_progress_indicator=0
+export enable_progress_indicator
 EOF
 
 
