grub-shell: On i386-ieee1275 don't try to switch to console.
console goes to serial as well, so this doesn't stop garbage from going
to serial. But it creates garbage itself.

--- a/tests/util/grub-shell.in
+++ b/tests/util/grub-shell.in
@@ -331,7 +331,8 @@ cat <<EOF >>${cfgfile}
 source "\$prefix/testcase.cfg"
 # Stop serial output to suppress "ACPI shutdown failed" error.
 EOF
-if [ x$console != x ]; then
+# Attempt to switch to console on i386-ieee1275 causes "screen not found" message
+if [ x$console != x ] && [ x"${grub_modinfo_target_cpu}-${grub_modinfo_platform}" != xi386-ieee1275 ]; then
     echo "terminal_output $console" >>${cfgfile}
 fi
 echo "${halt_cmd}" >>${cfgfile}
