--- a/tests/util/grub-shell.in
+++ b/tests/util/grub-shell.in
@@ -170,6 +170,7 @@ case "${grub_modinfo_target_cpu}-${grub_modinfo_platform}" in
 	boot=cd
 	console=console
 	trim=1
+	qemuopts="-bios OVMF.fd $qemuopts"
 	;;
     *)
 	boot=hd
