--- a/grub-core/Makefile.core.def
+++ b/grub-core/Makefile.core.def
@@ -1686,6 +1686,22 @@ module = {
   x86 = loader/xnu.c;
 
   enable = x86;
+}
+
+module = {
+  name = random;
+  x86 = lib/i386/random.c;
+  common = lib/random.c;
+
+  i386_multiboot = kern/i386/tsc_pmtimer.c;
+  i386_coreboot = kern/i386/tsc_pmtimer.c;
+  i386_pc = kern/i386/tsc_pmtimer.c;
+
+  enable = i386_multiboot;
+  enable = i386_coreboot;
+  enable = i386_pc;
+  enable = i386_efi;
+  enable = x86_64_efi;
 };
 
 module = {
