--- a/grub-core/Makefile.core.def
+++ b/grub-core/Makefile.core.def
@@ -213,7 +213,7 @@ kernel = {
   arm_efi = kern/arm/efi/init.c;
   arm_efi = kern/arm/efi/misc.c;
 
-  arm64_efi = kern/arm/efi/init.c;
+  arm64_efi = kern/arm64/efi/init.c;
 
   i386_pc = kern/i386/pc/init.c;
   i386_pc = kern/i386/pc/mmap.c;
