Change -v to -V for version of shell utils.

--- a/util/grub-mkconfig.in
+++ b/util/grub-mkconfig.in
@@ -85,7 +85,7 @@ do
     -h | --help)
 	usage
 	exit 0 ;;
-    -v | --version)
+    -V | --version)
 	echo "$self (${PACKAGE_NAME}) ${PACKAGE_VERSION}"
 	exit 0 ;;
     -o | --output)
